# extropian-solver-fluidx3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/exd/solver/fluidx3d/: components.hpp  fluidx3d_plugin.hpp  fluidx3d_system.hpp
include/ext/solver/fluidx3d/: components.hpp  fluidx3d_plugin.hpp  fluidx3d_system.hpp
src/: fluidx3d_plugin.cpp  fluidx3d_system.cpp
